unpackaged/main/default/objects/Case/fields/Admin_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Admin_Request_Type__c</fullName>
    <description>US-0008663 - Enhancements to enable Data Load privileges to non-Hive team members</description>
    <label>Admin Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Load</fullName>
            </value>
            <value>
                <fullName>Export Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>