unpackaged/main/default/objects/Case/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0015698 Create approval flow for user creation and reactivation</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>