unpackaged/main/default/objects/Case/fields/Approved_by_Finance__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0011344</description>
    <label>Approved by Finance</label>
    <type>Checkbox</type>
</CustomField>