unpackaged/main/default/objects/Case/fields/Ardira_Survey__c.field-meta.xml
<CustomField>
    <fullName>Ardira_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Ardira Survey record</description>
    <inlineHelpText>Please select a Survey Vista Survey from the look up.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>ArdiraSurvey__Survey__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>