unpackaged/main/default/objects/Case/fields/Ardira_Survey_Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>Ardira_Survey_Validation_Result__c</fullName>
    <description>US-0009538 - Automatically validate Ardira Surveys</description>
    <label>Ardira Survey Validation Result</label>
    <type>TextArea</type>
</CustomField>