unpackaged/main/default/objects/Case/fields/Business_Priority__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority__c</fullName>
    <description>US-0006986 - Hive feature request improvements</description>
    <inlineHelpText>High = Business is blocked - adds business value and no workaround exists
Medium = adding business value - workaround exists
Low = not business critical - workaround exists</inlineHelpText>
    <label>Business Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BA_Priority</valueSetName>
    </valueSet>
</CustomField>