unpackaged/main/default/objects/Case/fields/Business_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Business_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0006986 - Lookup to User object to identify business sponsor for feature request</description>
    <inlineHelpText>Please enter the budget owner who will pay for the new feature requested</inlineHelpText>
    <label>Business Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets3</relationshipName>
    <type>Lookup</type>
</CustomField>