unpackaged/main/default/objects/Case/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>EPH-7953 User creation ticket process enhancement</description>
    <inlineHelpText>Cost Center will be used for license cost cross charging</inlineHelpText>
    <label>Cost Center</label>
    <length>20</length>
    <type>Text</type>
</CustomField>