unpackaged/main/default/objects/Case/fields/Data_export_completed__c.field-meta.xml
<CustomField>
    <fullName>Data_export_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008663 - Enhancements to enable Data Load privileges to non-Hive team members</description>
    <inlineHelpText>Check this box to confirm you have exported related object data and attached to this ticket</inlineHelpText>
    <label>Data export completed</label>
    <type>Checkbox</type>
</CustomField>