unpackaged/main/default/objects/Case/fields/Deactivate_User__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>{US-0007614} - Case Migration - Additional field for User Deactivation for improved user experience</description>
    <label>Deactivate User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets6</relationshipName>
    <type>Lookup</type>
</CustomField>