unpackaged/main/default/objects/Case/fields/Deal_Statement__c.field-meta.xml
<CustomField>
    <fullName>Deal_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0009180 - [NA] Migrate Disputes Microsite for Seller Case creation</description>
    <label>Deal Statement</label>
    <referenceTo>Deal_Statement__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>