unpackaged/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>EPH-7953 User creation ticket process enhancement</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>