unpackaged/main/default/objects/Case/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>[EPH-3309] (Sprint-6) Provides all divisions in eBay</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COO – CRM &amp; Insight</fullName>
            </value>
            <value>
                <fullName>COO - Marketing</fullName>
            </value>
            <value>
                <fullName>COO – Seller Experience</fullName>
            </value>
            <value>
                <fullName>COO – GCX &amp; Monetisation</fullName>
            </value>
            <value>
                <fullName>COO – Partnership</fullName>
            </value>
            <value>
                <fullName>COO – Enterprise sales</fullName>
            </value>
            <value>
                <fullName>COO – Others</fullName>
            </value>
            <value>
                <fullName>COO - LT</fullName>
            </value>
            <value>
                <fullName>EU Finance – Analytics</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>GCX</fullName>
            </value>
            <value>
                <fullName>EEC</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>