unpackaged/main/default/objects/Case/fields/eBay_Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>eBay_Corp_ID__c</fullName>
    <description>EPH-3309 (Sprint 6) E-bay Corporation ID</description>
    <inlineHelpText>Provide the User ID from eBay HUB page</inlineHelpText>
    <label>eBay Corp ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>