unpackaged/main/default/objects/Case/fields/eBay_Email__c.field-meta.xml
<CustomField>
    <fullName>eBay_Email__c</fullName>
    <formula>OR(
CONTAINS( CreatedBy.Email , &quot;ebay.&quot;),
CONTAINS( CreatedBy.Email , &quot;tpa.&quot;),
CONTAINS( CreatedBy.Email , &quot;yourccc.&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eBay Email</label>
    <type>Checkbox</type>
</CustomField>