unpackaged/main/default/objects/Case/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <description>[EPH-3309] (Sprint-6) User E-mail address</description>
    <label>Email address</label>
    <type>Email</type>
</CustomField>