unpackaged/main/default/objects/Case/fields/Existing_User__c.field-meta.xml
<CustomField>
    <fullName>Existing_User__c</fullName>
    <description>US-000756</description>
    <label>Existing User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>