unpackaged/main/default/objects/Case/fields/Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008189 - Enhancement for financial approval on support tickets</description>
    <label>Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets7</relationshipName>
    <type>Lookup</type>
</CustomField>