unpackaged/main/default/objects/Case/fields/Financial_Impact__c.field-meta.xml
<CustomField>
    <fullName>Financial_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008189 - Enhancement for financial approval on support tickets</description>
    <label>Financial Impact</label>
    <type>Checkbox</type>
</CustomField>