unpackaged/main/default/objects/Case/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>[EPH-3309] (Sprint-6) First name of your name</description>
    <label>First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>