unpackaged/main/default/objects/Case/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <description>US-0006986 - Hive Feature Request enhancements,
US-0011331 - New Hive Products Object - Hive Products field changes</description>
    <label>(NOT USED) HIVE Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Area</valueSetName>
    </valueSet>
</CustomField>