unpackaged/main/default/objects/Case/fields/HIVE_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>HIVE_Product_Name__c</fullName>
    <description>US-0011331 - For using in email template</description>
    <formula>HIVE_Products__r.Name</formula>
    <label>HIVE Product Name</label>
    <type>Text</type>
</CustomField>