unpackaged/main/default/objects/Case/fields/I_want_to_be_notified__c.field-meta.xml
<CustomField>
    <fullName>I_want_to_be_notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field used for sending notifications to the users when the status of the ticket changes</description>
    <inlineHelpText>Please check this field if you want to be informed when this ticket changes its status</inlineHelpText>
    <label>I want to be notified</label>
    <type>Checkbox</type>
</CustomField>