unpackaged/main/default/objects/Case/fields/Inactive_User__c.field-meta.xml
<CustomField>
    <fullName>Inactive_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7204 Record Type for Object ticket: User Reactivation</description>
    <label>Inactive User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets4</relationshipName>
    <type>Lookup</type>
</CustomField>