unpackaged/main/default/objects/Case/fields/Integration_Path__c.field-meta.xml
<CustomField>
    <fullName>Integration_Path__c</fullName>
    <description>US-0008603 - [NA] Merchant Integration Case Layout</description>
    <label>Integration Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>