unpackaged/main/default/objects/Case/fields/Integration_Tier__c.field-meta.xml
<CustomField>
    <fullName>Integration_Tier__c</fullName>
    <description>US-0008603 - [NA] Merchant Integration Case Layout</description>
    <inlineHelpText>Tier 1 - Brand or GMV Expected $1 Million + ||
Tier 2 - Mid-Level Merchant or Small Business || .
Tier 3 - Scaling or Lower Potential . ||
Tier 4 - Pipeline Development</inlineHelpText>
    <label>Integration Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>