unpackaged/main/default/objects/Case/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>[EPH-3309] (sprint-6) Last name of your name</description>
    <label>Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>