unpackaged/main/default/objects/Case/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>[EPH-3309] (Sprint-6) Pick list field to select Country working from</description>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Czech (Czech Republic)</fullName>
            </value>
            <value>
                <fullName>English (Australia)</fullName>
            </value>
            <value>
                <fullName>English (Ireland)</fullName>
            </value>
            <value>
                <fullName>English (UK)</fullName>
            </value>
            <value>
                <fullName>French (France)</fullName>
            </value>
            <value>
                <fullName>German (Germany)</fullName>
            </value>
            <value>
                <fullName>German (Switzerland)</fullName>
            </value>
            <value>
                <fullName>Italian (Italy)</fullName>
            </value>
            <value>
                <fullName>Spanish (Spain)</fullName>
            </value>
            <value>
                <fullName>English (US)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>