unpackaged/main/default/objects/Case/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <description>US-0006986 - Hive Feature Request enhancements</description>
    <inlineHelpText>Specify the estimated number of users impacted by this feature request</inlineHelpText>
    <label>Number of Users</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>