unpackaged/main/default/objects/Case/fields/Old_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Ticket_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>{US-0007614} - To be used temporarily during migration to cases to allow open Tickets to be replicated in Case object with lookup to original ticket. Once historic tickets are closed, this field will be removed.</description>
    <label>Old Ticket Number</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>OldTicketNumber</relationshipName>
    <type>Lookup</type>
</CustomField>