unpackaged/main/default/objects/Case/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <description>[EPH-3309] (Sprint-6) Pick list field displays permission sets for users</description>
    <label>Permission Sets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Approval</fullName>
            </value>
            <value>
                <fullName>Ticket Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Execution Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>