unpackaged/main/default/objects/Case/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <description>[EPH-3309] (Sprint-6) Pick list field gives information about existing profiles</description>
    <inlineHelpText>Choose Standard User Profile if you are in Sales.
Choose Marketing Profile if you are in Sales Planning.</inlineHelpText>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard User Profile</fullName>
            </value>
            <value>
                <fullName>Marketing Profile</fullName>
            </value>
            <value>
                <fullName>Business Admin</fullName>
            </value>
            <value>
                <fullName>GCX Partner Profile</fullName>
            </value>
            <value>
                <fullName>AU Standard User Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>