unpackaged/main/default/objects/Case/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>EPH-7953 User creation ticket process enhancement</description>
    <formula>TEXT( Picklist__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile</label>
    <type>Text</type>
</CustomField>