unpackaged/main/default/objects/Case/fields/Project_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan_Link__c</fullName>
    <description>US-0008603 - [NA] Merchant Integration Case Layout</description>
    <label>Project Plan Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>