unpackaged/main/default/objects/Case/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>US-0006986 - Hive Feature Request enhancements</description>
    <label>Rejection Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>