unpackaged/main/default/objects/Case/fields/Remove_Contact__c.field-meta.xml
<CustomField>
    <fullName>Remove_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Contact Removal Form record type</description>
    <label>Remove Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>