unpackaged/main/default/objects/Case/fields/Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Request_Category__c</fullName>
    <description>US-0006986 - Hive Feature Request enhancements</description>
    <label>Request Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Feature</fullName>
            </value>
            <value>
                <fullName>Feature Enhancement</fullName>
            </value>
            <value>
                <fullName>Process Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>