unpackaged/main/default/objects/Case/fields/Role_Id_Same_As__c.field-meta.xml
<CustomField>
    <fullName>Role_Id_Same_As__c</fullName>
    <description>US-0008096 - US_Update New User Creation Process to include Role</description>
    <formula>Same_settings_as__r.UserRoleId</formula>
    <label>Role Id Same As</label>
    <type>Text</type>
</CustomField>