unpackaged/main/default/objects/Case/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <description>US-0008096 - US_Update New User Creation Process to include Role</description>
    <inlineHelpText>Controlled by Profile</inlineHelpText>
    <label>Roles</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Roles</valueSetName>
    </valueSet>
</CustomField>