unpackaged/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>[EPH-2950] (Sprint-5) Provides Pick list values to convey where problem is caused</description>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Human Error</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>