unpackaged/main/default/objects/Case/fields/Same_settings_as__c.field-meta.xml
<CustomField>
    <fullName>Same_settings_as__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EPH-3309] (Sprint-6) Look up field to provide name of known users</description>
    <inlineHelpText>Provide the name of an existing user whose settings will be mirrored</inlineHelpText>
    <label>Same settings as</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets5</relationshipName>
    <type>Lookup</type>
</CustomField>