unpackaged/main/default/objects/Case/fields/Search_in_HUB__c.field-meta.xml
<CustomField>
    <fullName>Search_in_HUB__c</fullName>
    <formula>HYPERLINK(SUBSTITUTE($Setup.EBH_OutboundLink__c.HUB_Search__c, &#39;&lt;username&gt;&#39;, First_Name__c &amp; &quot;%20&quot; &amp; Last_Name__c), &quot;Hub Search&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search in HUB</label>
    <type>Text</type>
</CustomField>