unpackaged/main/default/objects/Case/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008603 - [NA] Merchant Integration Case Layout</description>
    <label>Seller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tickets (Seller)</relationshipLabel>
    <relationshipName>Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>