unpackaged/main/default/objects/Case/fields/Should_approve_Campaign_requests__c.field-meta.xml
<CustomField>
    <fullName>Should_approve_Campaign_requests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EPH-3309] (Sprint-6) Checkbox value to provide present campaign requests</description>
    <label>Should approve Campaign requests?</label>
    <type>Checkbox</type>
</CustomField>