unpackaged/main/default/objects/Case/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>[EPH-2950] (Sprint-5) Summary of ticket</description>
    <label>Summary</label>
    <length>80</length>
    <type>Text</type>
</CustomField>