unpackaged/main/default/objects/Case/fields/Support_Comments__c.field-meta.xml
<CustomField>
    <fullName>Support_Comments__c</fullName>
    <label>Support Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>