unpackaged/main/default/objects/Case/fields/Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_ID__c</fullName>
    <description>US-0015717 Survey ID - Read Only Field</description>
    <label>Click Tools Survey ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>