unpackaged/main/default/objects/Case/fields/Target_Object_s__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_s__c</fullName>
    <description>US-0008663 - Enhancements to enable Data Load privileges to non-Hive team members</description>
    <inlineHelpText>Note all the object(s) which will be affected by the data load</inlineHelpText>
    <label>Target Object(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>