unpackaged/main/default/objects/Case/fields/Tax_needs__c.field-meta.xml
<CustomField>
    <fullName>Tax_needs__c</fullName>
    <description>US-0008603 - [NA] Merchant Integration Case Layout</description>
    <label>Tax needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>