unpackaged/main/default/objects/Case/fields/Terms_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_Signed_Date__c</fullName>
    <description>US-0009366 - [Export Reports] - Manage PII access within Hive in a SOX compliant manner</description>
    <label>Terms Signed Date</label>
    <type>DateTime</type>
</CustomField>