unpackaged/main/default/objects/Case/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Case/&quot;+  Id + &quot;/view&quot;, &quot;ST-&quot; &amp;  right(CaseNumber,6),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Number</label>
    <type>Text</type>
</CustomField>